corrigindo template para vincular endpoint quarkus e removendo regiao do template

--- a/template.yaml
+++ b/template.yaml
@@ -18,7 +18,6 @@ Globals:
     Tracing: Active
     Environment:
       Variables:
-        AWS_REGION: !Ref AwsRegionParam
         TABLE_NAME: !Ref FeedbackTable
         SNS_TOPIC_ARN: !Ref AdminTopic
 
@@ -73,8 +72,8 @@ Resources:
           Type: HttpApi
           Properties:
             ApiId: !Ref FeedbackApi
-            Path: /avaliacao
-            Method: POST
+            Path: /{proxy+}
+            Method: ANY
 
   WeeklyReportFunction:
     Type: AWS::Serverless::Function
